# deep-code

./: .gitignore  404.html  CHANGES.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  unittest-workflow.yaml
about/: index.html
cli/: index.html
configuration/: index.html
deep_code/: constants.py  version.py
deep_code/api/: __init__.py  check.py  new.py  publish.py  publish_experiments.py  publish_products.py  setup_ci.py  test.py
deep_code/cli/: __init__.py  lint.py  main.py  publish.py
deep_code/tests/api/: __init__.py  test_publish.py
deep_code/tests/tools/: test_new.py  test_publish.py
deep_code/tests/utils/: test_custom_xrlint_rules.py  test_dataset_stac_generator.py  test_github_automation.py  test_helper.py  test_ogc_api_record.py  test_ogc_record_generator.py  test_osc_extension.py
deep_code/tools/: check.py  lint.py  new.py  publish.py
deep_code/tools/templates/: .gitignore  pyproject.toml  workflow-template.yml  workflow.ipynb
deep_code/utils/: custom_xrlint_rules.py  dataset_stac_generator.py  github_automation.py  helper.py  ogc_api_record.py  ogc_record_generator.py  osc_extension.py
docs/: about.md  cli.md  configuration.md  examples.md  getting-started.md  index.md  python-api.md
examples/: index.html
examples/notebooks/: publish_to_EarthCODE.ipynb
getting-started/: index.html
python-api/: index.html
search/: search_index.json
