[build-system]
requires = ['setuptools>=61.2.0', 'wheel', 'build']
build-backend = 'setuptools.build_meta'

[project]
name = '{repo_name}'
version = '0.1.0'
description = 'A Python package for DeepESDL workflows.'
authors = [
    {name = 'Your Name', email = 'your.email@example.com'}
]
dependencies = [
    'numpy',
    'pandas',
]